# Jarvis

./: .gitignore  BinVGr.ps1  BinVGrSimple.ps1  README.md  build_from_list.ps1  build_one.ps1  bvg_commands.txt  convert_json_to_binvg.rs  hybrid_integration.ps1  jarvis.py  jarvis_binvg.json  jarvis_binvg.ps1  jarvis_binvg_bridge.ps1  jarvis_binvg_simple.ps1  jarvis_brain.ps1  jarvis_cli.ps1  jarvis_commands.json  jarvis_functions.ps1  jarvis_hybrid_format.json  jarvis_old.py  requirements.txt  run_binvg.ps1  run_binvg_simple.ps1  test_bvg.py  test_plugin.py
binvg/: Cargo.toml  clean_null_bytes.py
binvg/convert_json/: Cargo.toml
binvg/src/: lib.rs  main.rs
binvg_sdk/: .gitignore  Cargo.toml  README.md  stress_test.rs  test_pipeline.rs
binvg_sdk/src/: adapter.rs  core.rs  lib.rs  pipeline.rs
hybrid_engine/: Cargo.toml  analysis.json  build_and_run.ps1  fix_utf8.ps1  fix_utf8_simple.ps1  test_read.rs
hybrid_engine/brain/: verbs.json
hybrid_engine/examples/: simple.rs
hybrid_engine/my_index/: graph.idx  meta.json  sparse.idx
hybrid_engine/my_indexcargo/: graph.idx  meta.json  sparse.idx
hybrid_engine/src/: builder.rs  builder.rs.bak  command_graph.rs  core.rs  error.rs  executor.rs  jvgr.rs  lib.rs  memory_graph.rs  nlp_minimal.rs  object_detector.rs  param_extractor.rs  persistence.rs  store.rs  verb_engine.rs
hybrid_engine/test_docs/: ai.txt  doc1.txt  doc2.txt  doc3.txt  graf1.txt  graf2.txt  graf3.txt  hybrid.txt  search.txt  test.txt
hybrid_engine/test_index/: graph.idx  meta.json  sparse.idx
hybrid_engine/test_save/: graph.idx  meta.json  (+1 more)
(+32 files in other folders)
