[package]
name = "binvg"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9"
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
