[package]
name = "hybrid_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "hybrid_engine"
path = "src/lib.rs"

[[bin]]
name = "hybrid_cli"
path = "src/bin/main.rs"

[[bin]]
name = "command_parser"
path = "src/bin/command_parser.rs"

[dependencies]
rustc-hash = "2.0"
fxhash = "0.2"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
memmap2 = "0.7"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
once_cell = "1.19"
meval = "0.2"

[features]
default = []
